--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-minifb = "*"
-log = "*"
-rayon = "*"
+minifb = "0.19.3"
+rayon = "1.5.1"
+num = "0.4.0"
+
+[workspace]
+members = ["gui"]
